RESOLVED FIXED141818
Cannot run a Safari test that requires running a Web Process
https://bugs.webkit.org/show_bug.cgi?id=141818
Summary Cannot run a Safari test that requires running a Web Process
Remy Demarest
Reported 2015-02-19 17:38:42 PST
Xcode sets up DYLD_INSERT_LIBRARIES to append libraries for the testing framework, apparently this breaks the background process set up which tries to append a path to an empty string resulting in an incorrect DYLD_INSERT_LIBRARIES value.
Attachments
Patch (1.54 KB, patch)
2015-02-19 17:50 PST, Remy Demarest
no flags
Remy Demarest
Comment 1 2015-02-19 17:50:34 PST
mitz
Comment 2 2015-02-19 17:53:35 PST
WebKit Commit Bot
Comment 3 2015-02-19 18:37:36 PST
Comment on attachment 246930 [details] Patch Clearing flags on attachment: 246930 Committed r180379: <http://trac.webkit.org/changeset/180379>
WebKit Commit Bot
Comment 4 2015-02-19 18:37:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.