Make EnvironmentVariables::appendValue() handle the case where the existing value is an empty string. https://bugs.webkit.org/show_bug.cgi?id=141818.

Patch by Remy Demarest <rdemarest@apple.com> on 2015-02-19
Reviewed by Dan Bernstein.

* UIProcess/Launcher/mac/EnvironmentVariables.cpp:
(WebKit::EnvironmentVariables::appendValue): If the existing value is an empty string, replace it rather than
append to it.

Canonical link: https://commits.webkit.org/159845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180379 268f45cc-cd09-0410-ab3c-d52691b4dbfc